<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_addition_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/first_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:minWidth="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/perform_addition_button"
        app:layout_constraintEnd_toStartOf="@id/addition_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <TextView
        android:id="@+id/addition_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_symbol"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/perform_addition_button"
        app:layout_constraintEnd_toStartOf="@id/second_number"
        app:layout_constraintStart_toEndOf="@id/first_number"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:minWidth="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/perform_addition_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addition_symbol"
        app:layout_constraintTop_toBottomOf="@id/title_text_view" />

    <Button
        android:id="@+id/perform_addition_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition_button_text"
        app:layout_constraintBottom_toTopOf="@id/display_result_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addition_symbol" />

    <TextView
        android:id="@+id/display_result_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/perform_addition_button" />
</androidx.constraintlayout.widget.ConstraintLayout>